# api/openapi.json
@@ -448,330 +448,6 @@
         }
       }
     },
-    "/vehicles": {
-      "get": {
-        "tags": [
-          "vehicle"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "getVehicles",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/vehicle": {
-      "post": {
-        "tags": [
-          "vehicle"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "createVehicle",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/vehicle/{id}": {
-      "get": {
-        "tags": [
-          "vehicle"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "getOneVehicle",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "vehicle"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "updateVehicle",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/vehicle/delete/{id}": {
-      "post": {
-        "tags": [
-          "vehicle"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "deleteVehicle",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/policies": {
-      "get": {
-        "tags": [
-          "vehicle"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "getPolicies",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/policy": {
-      "post": {
-        "tags": [
-          "vehicle"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "createPolicy",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/policy/{id}": {
-      "get": {
-        "tags": [
-          "policy"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "getOnePolicy",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "policy"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "updatePolicy",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/policy/delete/{id}": {
-      "post": {
-        "tags": [
-          "policy"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "deletePolicy",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/contacts": {
-      "get": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "getAllContacts",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/contact": {
-      "post": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "createContact",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/contact/{id}": {
-      "get": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "getOneContact",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "updateContact",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/contact/delete/{id}": {
-      "post": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "User profile retrieval",
-        "description": "Retrieve user's self profile information",
-        "operationId": "deleteContact",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {}
-            }
-          },
-          "401": {
-            "description": "Not authenticated",
-            "content": {}
-          }
-        }
-      }
-    },
     "/field": {
       "post": {
         "tags": [
@@ -868,6 +544,92 @@
         "summary": "User profile retrieval",
         "description": "Retrieve user's self profile information",
         "operationId": "getBindedFields",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "401": {
+            "description": "Not authenticated",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/entity": {
+      "post": {
+        "tags": [
+          "field"
+        ],
+        "summary": "User profile retrieval",
+        "description": "Retrieve user's self profile information",
+        "operationId": "createEntity",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "401": {
+            "description": "Not authenticated",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/entities/{type}": {
+      "get": {
+        "tags": [
+          "field"
+        ],
+        "summary": "User profile retrieval",
+        "description": "Retrieve user's self profile information",
+        "operationId": "getEntities",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "401": {
+            "description": "Not authenticated",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/entity/{type}/{id}": {
+      "get": {
+        "tags": [
+          "field"
+        ],
+        "summary": "User profile retrieval",
+        "description": "Retrieve user's self profile information",
+        "operationId": "getEntity",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "401": {
+            "description": "Not authenticated",
+            "content": {}
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "field"
+        ],
+        "summary": "User profile retrieval",
+        "description": "Retrieve user's self profile information",
+        "operationId": "deleteEntity",
         "responses": {
           "200": {
             "description": "Successful operation",
